# plasma-desktop-branding

xdg/: meson.build  plasma-org.kde.plasma.desktop-appletsrc
